fix(Objectives): visibility form is not fully visible

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -7008,7 +7008,7 @@ ul.newSelectList .miniStylePagination {
   line-height: 20px;
 }
 .objectivesDescValue {
-  height: 105px;
+  /*height: 105px;*/
   overflow: hidden;
 }
 .afterTextBlock {
